뉴스 전송 로직 수정 및 페이지 작성